--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@ refactor: true
 <div id="personal-info" class="card-wrapper card my-4">
   <a href="https://chugelen.github.io/about/" class="post-preview row g-0 flex-md-row-reverse">
     <div class="col-md-5">
-      <img src="/assets/img/robotowl.jpg">
+      <img src="/assets/img/robotowl.jpg" alt"owl">
     </div>
     <div class="col-md-7">
       <div class="card-body d-flex flex-column">
