--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,14 +11,14 @@ refactor: true
 {% assign posts = '' | split: '' %}
 
 <!-- Personal Information Section -->
-<div id="personal-info" class="card-wrapper card my-4">
+<div id="personal-info" class="card-wrapper card my-4" style="background-color: black; color: white;">
   <div class="row g-0 flex-md-row-reverse">
     <div class="col-md-5">
-      <img src="/assets/img/logo.png" alt="Logo" class="img-fluid">
+      <img src="/assets/img/robotowl.jpg" alt="owl" class="img-fluid">
     </div>
     <div class="col-md-7">
       <div class="card-body d-flex flex-column">
-        <h1 class="card-title my-2">About Me</h1>
+        <h1 class="card-title my-2"></h1>
         <p class="card-text content mt-0 mb-3">
           Hi, I’m Cali Hugelen, a data science student graduating in August 2024. I enjoy using data science to help improve HR processes by creating data 
           visualizations and dashboards. I'm passionate about learning SQL and Python to streamline processes and provide insights. 
@@ -29,8 +29,6 @@ refactor: true
   </div>
 </div>
 <!-- End of Personal Information Section -->
-
-
 
 <!-- Get pinned posts -->
 
