--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,10 +11,10 @@ refactor: true
 {% assign posts = '' | split: '' %}
 
 <!-- Personal Information Section -->
-<div id="personal-info" class="card-wrapper card my-4" style="background-color: black; color: white;">
+<div id="personal-info" class="card-wrapper card my-4" style="background-color: rgba(56, 53, 53, 0.911); color: white;">
   <div class="row g-0 flex-md-row-reverse">
     <div class="col-md-5">
-      <img src="/assets/img/robotowl.jpg" alt="owl" class="img-fluid">
+      <img src="/assets/img/owlpreview.jpg" alt="owl" class="img-fluid">
     </div>
     <div class="col-md-7">
       <div class="card-body d-flex flex-column">
