--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ refactor: true
 <div id="personal-info" class="card-wrapper card my-4" style="background-color: rgba(56, 53, 53, 0.911); color: white;">
   <div class="row g-0 flex-md-row-reverse">
     <div class="col-md-5">
-      <img src="/assets/img/owlpreview.jpg" alt="owl" class="img-fluid">
+      <img src="/assets/img/owlpreview.jpg" alt="owl" class="img-fluid" style="animation: none; transition: none;">
     </div>
     <div class="col-md-7">
       <div class="card-body d-flex flex-column">
