--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,11 +10,11 @@ refactor: true
 
 {% assign posts = '' | split: '' %}
 
-<!-- Personal Information Section -->
+<!-- Welcome Message Section -->
 <div id="personal-info" class="card-wrapper card my-4" style="background-color: rgba(56, 53, 53, 0.911); color: white;">
   <div class="row g-0 flex-md-row-reverse">
     <div class="col-md-5">
-      <img src="/assets/img/owlpreview.jpg" alt="owl" class="img-fluid" style="animation: none; transition: none;">
+      <img src="/assets/img/owlpreview.jpg" alt="owl" class="img-fluid" >
     </div>
     <div class="col-md-7">
       <div class="card-body d-flex flex-column">
@@ -22,13 +22,13 @@ refactor: true
         <p class="card-text content mt-0 mb-3">
           Hi, I’m Cali Hugelen, a data science student graduating in August 2024. I enjoy using data science to help improve HR processes by creating data 
           visualizations and dashboards. I'm passionate about learning SQL and Python to streamline processes and provide insights. 
-          <br><a href="https://chugelen.github.io/about/">Learn more about me</a>.
+          <a href="https://chugelen.github.io/about/">Learn more about me here</a>.
         </p>
       </div>
     </div>
   </div>
 </div>
-<!-- End of Personal Information Section -->
+<!-- End of Welcome Message Section -->
 
 <!-- Get pinned posts -->
 
