--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@ refactor: true
         <p class="card-text content mt-0 mb-3">
           Hi, I’m Cali Hugelen, a data science student graduating in August 2024. I enjoy using data science to help improve HR processes by creating data 
           visualizations and dashboards. I'm passionate about learning SQL and Python to streamline processes and provide insights. 
-          <a href="https://chugelen.github.io/about/">Learn more about me here</a>.
+          <a href="https://chugelen.github.io/about/">Learn more about me</a>.
         </p>
       </div>
     </div>
